tests/test-dirs/upstream-typing-recovery/original-tests/not_a_function.compilers.reference
File "not_a_function.ml", line 1:
Error: Multiple errors were encountered
File "not_a_function.ml", line 11, characters 19-21:
11 |   let a : string = 10 in
                        ^^
  The constant 10 has type int but an expression was expected of type string
File "not_a_function.ml", line 12, characters 14-26:
12 |   let () = if (fun x -> x) then () in
                   ^^^^^^^^^^^^
  This expression should not be a function, the expected type is bool
  because it is in the condition of an if-statement
File "not_a_function.ml", line 17, characters 21-23:
17 |     let a : string = 10 in
                          ^^
  The constant 10 has type int but an expression was expected of type string
File "not_a_function.ml", line 18, characters 16-28:
18 |     let () = if (fun x -> x) then () in
                     ^^^^^^^^^^^^
  This expression should not be a function, the expected type is bool
  because it is in the condition of an if-statement
File "not_a_function.ml", line 22, characters 12-24:
22 | let () = if (fun x -> x) then () else ()
                 ^^^^^^^^^^^^
  This expression should not be a function, the expected type is bool
  because it is in the condition of an if-statement
File "not_a_function.ml", line 27, characters 15-16:
27 | let t : bool = 0
                    ^
  The constant 0 has type int but an expression was expected of type bool
